# spot_robot

./: CMakeLists.txt  package.xml
launch/: all.launch.py  nav2.launch.py  publish_full_pointcloud.launch.py  publish_local_grid.launch.py  republish_camera_info.launch.py  rtabmap.launch.py  spot.launch.py  voxelize.launch.py
params/: main.yaml  nav2_params.yaml
rviz/: spot.rviz
scripts/: publish_local_grid.py
src/: publish_full_pointcloud.cpp  republish_camera_info.cpp  voxelize.cpp
